# libkds

./: .gitignore  CMakeLists.txt  README.md  kds_config.c  kds_config.h  kds_err.h  kds_mod.h  kds_test.c  libkds.h
include/libkds/: kds_config.h  kds_err.h  libkds.h
kdscli/: CMakeLists.txt  main.c
modules/pcap/: CMakeLists.txt  pcapmod.c
src/: kds_config.c  kds_test.c
